Fix text alignment and add finished page titles

--- a/web/content/css/style.css
+++ b/web/content/css/style.css
@@ -173,6 +173,7 @@ p {
 	left: 50%;
 	transform: translate(-50%, -50%);
 	-ms-transform: translate(-50%, -50%);
+	text-align: center;
 }
 
 /*.tile:hover {
